Added static method support
Attribute and method to create proxy of static methods

--- a/Shimterface.Tests/Shimterface.Tests.csproj
+++ b/Shimterface.Tests/Shimterface.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="SignatureEnumerableChangeTests.cs" />
     <Compile Include="StructTests.cs" />
     <Compile Include="DateTimeExample.cs" />
+    <Compile Include="StaticMemberTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shimterface\Shimterface.csproj">
