--- a/Shimterface/Shimterface.Standard.csproj
+++ b/Shimterface/Shimterface.Standard.csproj
@@ -4,18 +4,21 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Ian Yates</Authors>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Version>1.0.0.1</Version>
+        <Version>1.1.0</Version>
         <PackageProjectUrl>https://github.com/IanYates83/Shimterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IanYates83/Shimterface</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageReleaseNotes>v1.0.0.1
+        <PackageReleaseNotes>v1.1.0.0
+Renamed Shimterface class to ShimBuilder, to fix namespace collision.
+
+v1.0.0.1
 Rebuilt for .NET Standard 2.1
 
 v1.0.0.0
 Original release for .NET Core</PackageReleaseNotes>
         <Copyright>(c) Ian Yates</Copyright>
-        <AssemblyVersion>1.0.0.1</AssemblyVersion>
-        <FileVersion>1.0.0.1</FileVersion>
+        <AssemblyVersion>1.1.0.0</AssemblyVersion>
+        <FileVersion>1.1.0.0</FileVersion>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
     </PropertyGroup>
     <ItemGroup>
