--- a/Shimterface/Shimterface.Standard.csproj
+++ b/Shimterface/Shimterface.Standard.csproj
@@ -41,6 +41,7 @@ Original release for .NET Core</PackageReleaseNotes>
         <AssemblyVersion>1.4.2</AssemblyVersion>
         <FileVersion>1.4.2</FileVersion>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
       <DocumentationFile>Shimterface.Standard.xml</DocumentationFile>
