--- a/Shimterface/Shimterface.Standard.csproj
+++ b/Shimterface/Shimterface.Standard.csproj
@@ -4,45 +4,16 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Ian Yates</Authors>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Version>1.4.2</Version>
+        <Version>1.5.0</Version>
         <PackageProjectUrl>https://github.com/IanYates83/Shimterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IanYates83/Shimterface</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageReleaseNotes>vNext
-Supports implemented interface methods.
-
-v1.4.2
-Dedicated ConstructorShimAttribute.
-StaticShimAttribute can be applied to interface for factory default.
-
-v1.4.1
-Updated packages.
-
-v1.4.0
-Can shim factory methods to provide constructors for concrete type.
-Removed need to specify the underlying return type when auto-shimming.
-
-v1.3.0
-Support renaming underlying members in shims.
-
-v1.2.1
-Support for shim of static fields.
-Shim supports heirarchical definitions (e.g., IDisposable).
-
-v1.2.0
-Added support to shim implementation fields using properties.
-
-v1.1.0
-Renamed Shimterface class to ShimBuilder, to fix namespace collision.
-
-v1.0.0.1
-Rebuilt for .NET Standard 2.1
-
-v1.0.0.0
-Original release for .NET Core</PackageReleaseNotes>
+        <PackageReleaseNotes>Support implemented interface methods.
+Support for shimming generic methods.
+Removed .NET Core 3.1 build.</PackageReleaseNotes>
         <Copyright>(c) Ian Yates</Copyright>
-        <AssemblyVersion>1.4.2</AssemblyVersion>
-        <FileVersion>1.4.2</FileVersion>
+        <AssemblyVersion>1.5.0</AssemblyVersion>
+        <FileVersion>1.5.0</FileVersion>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
         <Nullable>enable</Nullable>
     </PropertyGroup>
