--- a/Shimterface/Shimterface.Standard.csproj
+++ b/Shimterface/Shimterface.Standard.csproj
@@ -10,7 +10,8 @@
         <RepositoryType>GitHub</RepositoryType>
         <PackageReleaseNotes>Support implemented interface methods.
 Support for shimming generic methods.
-Removed .NET Core 3.1 build.</PackageReleaseNotes>
+Removed .NET Core 3.1 build.
+Dropped IsConstructor from StaticShimAttribute.</PackageReleaseNotes>
         <Copyright>(c) Ian Yates</Copyright>
         <AssemblyVersion>1.5.0</AssemblyVersion>
         <FileVersion>1.5.0</FileVersion>
