--- a/Shimterface.Tests/Shimterface.Standard.Tests.csproj
+++ b/Shimterface.Tests/Shimterface.Standard.Tests.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <RootNamespace>Shimterface.Tests</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
