--- a/Shimterface/Shimterface.Standard.csproj
+++ b/Shimterface/Shimterface.Standard.csproj
@@ -17,6 +17,7 @@ Dropped IsConstructor from StaticShimAttribute.</PackageReleaseNotes>
         <FileVersion>1.5.0</FileVersion>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
         <Nullable>enable</Nullable>
+        <RootNamespace>Shimterface</RootNamespace>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
       <DocumentationFile>Shimterface.Standard.xml</DocumentationFile>
