--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,8 @@ jobs:
     - name: Coverlet coverage test
       uses: b3b00/coverlet-action@1.1.1
       with:
-        output: lcov.info
+        output: ../lcov.info
         outputFormat: lcov
         testProject: Shimterface.Tests/Shimterface.Standard.Tests.csproj
+    - name: stryker dotnet
+      uses: naveen497/actions@0.0.1
