--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,19 +28,19 @@ jobs:
       
     - name: Build
       run: dotnet build --no-restore
-#    - name: Test
-#      run: dotnet test --no-build --verbosity normal
-    - name: Coverlet coverage test
-      uses: b3b00/coverlet-action@1.1.1
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
+#    - name: Coverlet coverage test
+#      uses: b3b00/coverlet-action@1.1.1
 #      with:
 #        output: ./lcov.info
 #        outputFormat: lcov
 #        testProject: Shimterface.Tests/Shimterface.Standard.Tests.csproj
 ##       run: coverlet /path/to/test-assembly.dll --target "dotnet" --targetargs "test /path/to/test-project --no-build"
-    - name: Publish to Coveralls
-      uses: coverallsapp/github-action@v1.1.2
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+#    - name: Publish to Coveralls
+#      uses: coverallsapp/github-action@v1.1.2
+#      with:
+#        github-token: ${{ secrets.GITHUB_TOKEN }}
 #        path-to-lcov: # default is ./coverage/lcov.info
         
     - name: Run Stryker.NET
