--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: /home/runner/work/Shimterface/Shimterface/
-        verbose: true
+#        verbose: true
 #      run: dotnet coverlet ./Shimterface.Tests/bin/Debug/netcoreapp3.1/Shimterface.Standard.Tests.dll --target "dotnet" --targetargs "test ./Shimterface.Tests/Shimterface.Standard.Tests.csproj --no-build" --format cobertura
 #    - name: Codecov
 #      uses: codecov/codecov-action@v1.3.1
@@ -47,10 +47,10 @@ jobs:
 #        files: coverage.cobertura.xml
 #        verbose: true
 
-#    - name: Run Stryker.NET
-#      run: cd ./Shimterface.Tests/; dotnet stryker
-#    - name: Upload mutation report
-#      uses: actions/upload-artifact@v2.2.2
-#      with:
-#        name: mutation-report.html
-#        path: ./**/mutation-report.html
+    - name: Run Stryker.NET
+      run: cd ./Shimterface.Tests/; dotnet stryker
+    - name: Upload mutation report
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: mutation-report.html
+        path: ./**/mutation-report.html
