--- a/Shimterface.Tests/Shimterface.Standard.Tests.csproj
+++ b/Shimterface.Tests/Shimterface.Standard.Tests.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
       <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
       <PackageReference Include="Moq" Version="4.16.1" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Shimterface\Shimterface.Standard.csproj" />
