--- a/Shimterface/Shimterface.Standard.csproj
+++ b/Shimterface/Shimterface.Standard.csproj
@@ -4,13 +4,14 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>IFYates</Authors>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Version>1.6.3</Version>
-        <AssemblyVersion>1.6.3</AssemblyVersion>
-        <FileVersion>1.6.3</FileVersion>
+        <Version>1.6.4</Version>
+        <AssemblyVersion>1.6.4</AssemblyVersion>
+        <FileVersion>1.6.4</FileVersion>
         <PackageProjectUrl>https://github.com/IFYates/Shimterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IFYates/Shimterface</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageReleaseNotes>[v1.6.3] Fixed issue #12 - shim of hidden property
+        <PackageReleaseNotes>[v1.6.4] Can specify true implementation type in attribute, to work around explicit implementation hiding
+[v1.6.3] Fixed issue #12 - shim of hidden property
 [v1.6.2] Fixed issue #11 - shim of hidden method
 [v1.6.1] Property and field overrides/adds can be done with methods.
 [v1.6.1] MissingMemberException instead of InvalidCastException thrown for unmatched shim members.
