--- a/Shimterface.Tests/IFY.Shimr.Tests.csproj
+++ b/Shimterface.Tests/IFY.Shimr.Tests.csproj
@@ -2,7 +2,6 @@
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-        <RootNamespace>Shimterface.Tests</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
@@ -11,6 +10,6 @@
       <PackageReference Include="Moq" Version="4.16.1" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Shimterface\Shimterface.Standard.csproj" />
+      <ProjectReference Include="..\Shimterface\IFY.Shimr.csproj" />
     </ItemGroup>
 </Project>
