--- a/Shimterface/IFY.Shimr.csproj
+++ b/Shimterface/IFY.Shimr.csproj
@@ -4,27 +4,26 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>IFYates</Authors>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Version>1.6.9</Version>
-        <AssemblyVersion>1.6.9</AssemblyVersion>
-        <FileVersion>1.6.9</FileVersion>
+        <Version>2.0.0</Version>
+        <AssemblyVersion>2.0.0</AssemblyVersion>
+        <FileVersion>2.0.0</FileVersion>
         <PackageProjectUrl>https://github.com/IFYates/Shimterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IFYates/Shimterface</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageReleaseNotes>[v.1.6.9] New namespace for extension methods
-[v.1.6.8] Fixed issue #19 - Exception shimming certain method overrides
+        <PackageReleaseNotes>[v2.0.0] Rename to IFY.Shimr
+[v1.6.9] New namespace for extension methods
+[v1.6.8] Fixed issue #19 - Exception shimming certain method overrides
 [v1.6.7] Fixed issue #17 - .NET 6 support for constructors on generic types
-[v1.6.6] Fixed issue #16 - invalid shim for multiple args to generic type constructor
-[v1.6.5] Generic method can be used to construct a generic type (Issue #14)</PackageReleaseNotes>
+[v1.6.6] Fixed issue #16 - invalid shim for multiple args to generic type constructor</PackageReleaseNotes>
         <Copyright>(c) IFYates</Copyright>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
         <Nullable>enable</Nullable>
-        <RootNamespace>Shimterface</RootNamespace>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-      <DocumentationFile>Shimterface.Standard.xml</DocumentationFile>
+      <DocumentationFile>IFY.Shimr.xml</DocumentationFile>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-      <DocumentationFile>Shimterface.Standard.xml</DocumentationFile>
+      <DocumentationFile>IFY.Shimr.xml</DocumentationFile>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
