--- a/IFY.Shimr.Tests/IFY.Shimr.Tests.csproj
+++ b/IFY.Shimr.Tests/IFY.Shimr.Tests.csproj
@@ -10,6 +10,6 @@
       <PackageReference Include="Moq" Version="4.16.1" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Shimterface\IFY.Shimr.csproj" />
+      <ProjectReference Include="..\IFY.Shimr\IFY.Shimr.csproj" />
     </ItemGroup>
 </Project>
