--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -71,4 +71,4 @@ jobs:
     - name: Publish package
       uses: actions/upload-artifact@v2
       with:
-        path: ./**/IFY.Shimr.*.nupkg
+        path: ./**/IFY.Shimr.*.*nupkg
