--- a/IFY.Shimr.Tests/IFY.Shimr.Tests.csproj
+++ b/IFY.Shimr.Tests/IFY.Shimr.Tests.csproj
@@ -10,6 +10,9 @@
 		<PackageReference Include="Moq" Version="4.16.1" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\IFY.Shimr.CodeGen\IFY.Shimr.CodeGen.csproj"
+						  OutputItemType="Analyzer"
+						  ReferenceOutputAssembly="false" />
 		<ProjectReference Include="..\IFY.Shimr\IFY.Shimr.csproj" />
 	</ItemGroup>
 </Project>
